--- a/src/view/category/template.html
+++ b/src/view/category/template.html
@@ -1,7 +1,7 @@
 <ul>
   <li v-for="category in categorys">
     <span class="c-name-container">
-      <a href="/categoy/{{category}}">
+      <a href="#/{{category[0]}}">
         {{ category[0] }}        
       </a>
     </span><!--
