--- a/src/view/experience/template.html
+++ b/src/view/experience/template.html
@@ -1,5 +1,16 @@
 
-<ul>
+ <ul>
+
+   <li v-for="experience in experiences" transition="expl" stagger="100">
+
+     <div>
+       <h2>{{ experience.info.title }}</h2>
+       <p>{{ experience.info.date }}</p>
+
+       <p>{{ experience.experience }}</p>
+     </div>
+    
+  </li>
   
 </ul>
 
