--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,19 @@
 @import "./common";
-
+@import "./letter";
 
 #app {
     margin: 0;
     padding: 0;
     height: 100%;
     width: 100%;
+
+    .main {
+        
+    }
+
+    .slide-dash {
+        
+    }
 }
 
 ::-webkit-scrollbar { 
