--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,11 +8,27 @@
     width: 100%;
 
     .main {
-        
+        height: 100%;
+        padding: 3rem 2rem;
+        box-sizing: border-box;
     }
 
     .slide-dash {
-        
+        border: 1px solid black;
+        display: inline-block;
+        width: 60%;
+        float: left;
+        height: 100%;
+        box-sizing: border-box;
+    }
+
+    .category-list {
+        overflow: scroll;
+        display: inline-block;
+        float: left;
+        width: 40%;
+        height: 100%;
+        background-color: white;
     }
 }
 
