--- a/src/scss/letter.scss
+++ b/src/scss/letter.scss
@@ -6,26 +6,27 @@
     margin: 0;
     padding: 0;
     list-style: none;
-
+    visibility: hidden;
+    
     li {
-        background-color: white;
         position: absolute;
+    }
+
+    &.active {
+        visibility: visible;
     }
 }
 
-.letter {
-    height: 250px;
-    width: 200px;
-}
 
 
 .letter-e {
     &.active {
         li {
+            background: black;
             &:nth-child(1) {
                 transform: scale(1, 1);
             }
-
+            
             &:nth-child(2) {
                 transform: scale(1, 1);
             }
@@ -52,7 +53,7 @@
             left: 0;
             transition: {
                 delay: 100ms;
-                duration: 100ms;
+                duration: 500ms;
             };
             transform-origin: top;
             transform: scale(1, 0);
@@ -64,8 +65,8 @@
             top: 0;
             left: 0;
             transition: {
-                delay: 100ms;
-                duration: 100ms;
+                delay: 500ms;
+                duration: 300ms;
             };
             transform-origin: left;
             transform: scale(0, 1);
@@ -77,8 +78,8 @@
             top: 37.5%;
             left: 0;
             transition: {
-                delay: 100ms;
-                duration: 100ms;
+                delay: 800ms;
+                duration: 300ms;
             };
             transform-origin: left;
             transform: scale(0, 1);
@@ -90,11 +91,74 @@
             bottom: 0;
             left: 0;
             transition: {
-                delay: 100ms;
-                duration: 100ms;
+                delay: 1100ms;
+                duration: 300ms;
             };
             transform-origin: left;
             transform: scale(0, 1);
         }
     }
+}
+
+
+.letter-x {
+    li {
+        transition: {
+            property: height;
+        };
+        
+        
+        &:nth-child(1) {
+            width: 100%;
+            height: 0%;
+            overflow: hidden;
+            transition: {
+                delay: 0ms;
+                duration: 300ms;
+            };
+            &:after {
+                position: absolute;
+                background: black;
+                content: '';
+                display: block;
+                width: 25%;
+                height: 540px;
+                top: -60px;
+                left: 111px;
+                //transform-origin: left;
+                transform: rotate(-27deg);
+            }
+        }
+
+        &:nth-child(2) {
+            width: 100%;
+            height: 0%;
+            overflow: hidden;
+            transition: {
+                delay: 300ms;
+                duration: 300ms;
+            };
+            &:after {
+                position: absolute;
+                background: black;
+                content: '';
+                display: block;
+                width: 25%;
+                height: 540px;
+                top: -60px;
+                left: 111px;  
+                //transform-origin: left;
+                transform: rotate(27deg);
+            }
+        }
+
+        
+    }
+    
+    &.active {
+        li {
+            height: 100%;
+        }
+    }
+    
 }
