--- a/src/view/category/style.scss
+++ b/src/view/category/style.scss
@@ -6,19 +6,17 @@
 w-category {
     @include clearfix;
     
-    overflow: hidden;
+
     display: block;
     
     
     &.off {
         ul {
             margin-left: -40%;
-            position: fixed;
+
         }
         
         li {
-            padding: 30px 0;
-            
             &:hover {
                 transform: scale(0.9, 0.9);
                 transform: scale3d(0.9, 0.9, 1);
@@ -46,8 +44,8 @@ w-category {
         transition: margin 1.2s ceaser($easeOutCubic);
         padding: 0;
         list-style: none;
-        width: 60%;
-        margin-left: 20%;
+        width: 80%;
+        margin-left: 10%;
         
         .c-name-container {
             transition: margin 1.2s ceaser($easeOutCubic), transform 0.2s ceaser($easeOutCubic), font-size 1s;
@@ -92,8 +90,9 @@ w-category {
         
         li {
             transition: padding 1.2s ceaser($easeOutCubic), transform 0.4s ceaser($easeInBack);
-            margin-top: 30px;
-            padding: 15px 0;
+            margin-top: 2px;
+            height: 50px;
+            line-height: 50px;
             box-shadow: 5px 5px 5px #999;
             border-radius: 1px;
             background: {
