--- a/src/view/experience/style.scss
+++ b/src/view/experience/style.scss
@@ -39,6 +39,11 @@ w-experience {
             margin: 0;
         }
     }
+
+    pre code {
+        background: #f8f8f8 !important;
+        border-radius: 5px;
+    }
 }
 
 .expl-transition {
