--- a/src/scss/letter.scss
+++ b/src/scss/letter.scss
@@ -7,7 +7,9 @@
     padding: 0;
     list-style: none;
     visibility: hidden;
-    
+    position: absolute;
+    top: 0;
+    left: 0;
     li {
         position: absolute;
     }
@@ -48,7 +50,7 @@
         
         &:nth-child(1) {
             height: 100%;
-            width: 40%;
+            width: 20%;
             top: 0;
             left: 0;
             transition: {
@@ -61,7 +63,7 @@
 
         &:nth-child(2) {
             width: 100%;
-            height: 25%;
+            height: 15%;
             top: 0;
             left: 0;
             transition: {
@@ -74,8 +76,8 @@
 
         &:nth-child(3) {
             width: 100%;
-            height: 25%;
-            top: 37.5%;
+            height: 15%;
+            top: 42.5%;
             left: 0;
             transition: {
                 delay: 800ms;
@@ -87,7 +89,7 @@
 
         &:nth-child(4) {
             width: 100%;
-            height: 25%;
+            height: 15%;
             bottom: 0;
             left: 0;
             transition: {
@@ -122,11 +124,10 @@
                 content: '';
                 display: block;
                 width: 25%;
-                height: 540px;
+                height: 538px;
                 top: -60px;
-                left: 111px;
-                //transform-origin: left;
-                transform: rotate(-27deg);
+                left: 46px;
+                transform: rotate(25.5deg);
             }
         }
 
@@ -144,11 +145,10 @@
                 content: '';
                 display: block;
                 width: 25%;
-                height: 540px;
+                height: 538px;
                 top: -60px;
-                left: 111px;  
-                //transform-origin: left;
-                transform: rotate(27deg);
+                left: 103px;
+                transform: rotate(-25.5deg);
             }
         }
 
