--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,7 +32,7 @@ $footer-height: 7rem;
         float: left;
         height: 100%;
         background: {
-            image: url(~!file!../static/img/how-to-write-a-book-1103081-TwoByOne.jpg);
+            image: url(../static/img/how-to-write-a-book-1103081-TwoByOne.jpg);
         }
         
         &.off {
