--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,9 +33,9 @@ header {
         }
         
         a {
-            color: white;
+            color: #ddd;
             &:active {
-                color: white;
+                color: #ddd;
             }
         }
     }
